@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="C:/lib/craftbukkit-1.7.9-R0.1.jar">
+	<classpathentry kind="lib" path="C:/lib/craftbukkit-1.8.3.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="http://jd.bukkit.org/beta/apidocs/"/>
+			<attribute name="javadoc_location" value="https://hub.spigotmc.org/javadocs/bukkit/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
