@@ -1,6 +1,15 @@
 
 version history:
 
+v17 dev
+- TO FILL IN , try to fix lamps problem
+
+v16
+- better mc1.8.3 compatibility and portal shape bugfixes
+
+v15
+- mc18 support
+
 v14
 - get info of any portal
 
